2005-01-18  Not Zed  <NotZed@Ximian.com>

	** See bug #70768.

	* em-folder-browser.c (emfb_mark_all_read): get the uid list from
	the message-list (view) rather than folder (model).

	* message-list.c (message_list_foreach): removed, no longer used.
	(message_list_get_uids): new function replacing ml_foreach, get
	visible uids's of messages.

2005-01-18  Not Zed  <NotZed@Ximian.com>
  
	** See bug #71105.

	* em-folder-tree.c (emft_popup_rename_folder): dont let a user
	rename a folder to one including '/'.

  	* em-format-html.c (emfh_gethttp): kill old 'load http 0 now=0' debug.
  
2004-12-01  Not Zed  <NotZed@Ximian.com>

	** See bug #69851.

	* mail-account-gui.c (save_service): dont skip the save_password
	setting if we don't have a needs_auth widget.

2004-11-25  Radek Doulik  <rodo@ximian.com>

	* em-junk-filter.c (em_junk_sa_test_spamd): do not call gconf here
	as we may be called from worker thread
	(em_junk_filter_get_plugin): read alternative spam[cd] binaries
	paths here, use init lock to be sure no one is accessing spam[cd]
	binaries paths

	Fixes #69623

2004-11-22  Not Zed  <NotZed@Ximian.com>

	** See bug #69339.

	* em-format-html.c (efh_format_do): after closing the base output
	stream, re-loop if more jobs were queued.

2004-11-19  Not Zed  <NotZed@Ximian.com>

	** See bug #69339.

	* em-format-html.c (efh_format_do): close the stream/html after we're
	finished, since the multipart/related stuff may write more content
	for orphaned attachments.

2004-11-23  Not Zed  <NotZed@Ximian.com>

	** See bug #69579.

	* em-folder-properties.c (em_folder_properties_show): check to see
	if the vfolder is the unmatched folder before letting the user try
	to see its properties.

2004-11-30  Not Zed  <NotZed@Ximian.com>

	** See bug #68958.

	* em-folder-browser.c (emfb_list_built): if the pending selected
	uid isn't in the folder (yet), don't clear it, just keep it
	around.  Hook/unhook folder_changed events.